--- a/pico/CMakeLists.txt
+++ b/pico/CMakeLists.txt
@@ -4,24 +4,24 @@ cmake_minimum_required(VERSION 3.13)
 # note: this must happen before project()
 include(pico_sdk_import.cmake)
 
-project(main)
+project(shuncar_pico)
 
 pico_sdk_init()
 
-add_executable(main main.c)
+add_executable(shuncar_pico main.c)
 
 # pull in common dependencies
-target_link_libraries(main pico_stdlib hardware_pwm hardware_adc)
+target_link_libraries(shuncar_pico pico_stdlib hardware_pwm hardware_adc)
 #target_link_libraries(main pico_stdlib)
 
 # create map/bin/hex file etc.
-pico_add_extra_outputs(main)
+pico_add_extra_outputs(shuncar_pico)
 
 # add url via pico_set_program_url
 #example_auto_set_url(hello_uart)
 
-pico_enable_stdio_usb(main 1)
-pico_enable_stdio_uart(main 0)
+pico_enable_stdio_usb(shuncar_pico 1)
+pico_enable_stdio_uart(shuncar_pico 0)
 
 # target_compile_definitions(main PRIVATE
 # # PICO_DEFAULT_UART_TX_PIN=16
